rename css file

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>我的第一个样式页面</title>
-  <link rel="stylesheet" href="mystyle.css">
+  <link rel="stylesheet" href="indexStyle.css">
 </head>
 
 <body>
