--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <title>我的第一个样式页面</title>
+  <title>我的第一个样式页面test</title>
   <link rel="stylesheet" href="mystyle.css">
 </head>
 
